# zwave-js-ui

./: CAPABILITIES.md  Cargo.toml  Dockerfile  README.md  compose.yml
.cargo/: config.toml
.github/workflows/: release.yml
docs/: deploy-lxc.md  zwave-js-ui.md
lxc/: provision.sh  zwave-js-ui.conf.example
scripts/: backup.sh  configure.sh  entrypoint.sh  install.sh  restore.sh
src/: abi_export.rs  lib.rs  main.rs
