[package]
name = "zwave-js-ui"
version = "0.1.0"
edition = "2021"
description = "Z-Wave JS UI bridge — orca service-backend"

[package.metadata.orca]
category = "home"

[lib]
name = "zwave_js_ui"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# zwave-js-ui is a BACKEND-ONLY orca plugin: zero #[orca_tool]s. It registers a
# ServiceBackend across the cdylib FFI seam and reaches the whole orca system
# through plugin-toolkit alone.
[dependencies]
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }
# The ONE non-orca dep: #[export_root_module] expands to bare ::abi_stable paths.
abi_stable = "0.11"

[dev-dependencies]
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[lints.clippy]
let_underscore_must_use = "deny"
